--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        android:padding="24dp"
+        android:background="#F5F5F5">
+
+
     <TextView
+            android:id="@+id/titleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="Library management"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textColor="#333333"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+
+    <Button
+            android:id="@+id/btnSearchBooks"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Search Books"
+            android:textAllCaps="false"
+            android:backgroundTint="#4CAF50"
+            android:textColor="#FFFFFF"
+            app:layout_constraintTop_toBottomOf="@id/titleText"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintWidth_percent="0.8"
+            android:layout_marginTop="32dp"/>
+
+
+    <Button
+            android:id="@+id/btnLibraries"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="View Libraries"
+            android:textAllCaps="false"
+            android:backgroundTint="#FF9800"
+            android:textColor="#FFFFFF"
+            app:layout_constraintTop_toBottomOf="@id/btnSearchBooks"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintWidth_percent="0.8"
+            android:layout_marginTop="16dp" />
+
+    <Button
+            android:id="@+id/btnAddLibrary"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Add Library"
+            android:textAllCaps="false"
+            android:backgroundTint="#9C27B0"
+            android:textColor="#FFFFFF"
+            app:layout_constraintTop_toBottomOf="@id/btnLibraries"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintWidth_percent="0.8"
+            android:layout_marginTop="16dp" />
+
+
+
+
+    <Button
+            android:id="@+id/btnDeleteLibrary"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Delete Library"
+            android:textAllCaps="false"
+            android:backgroundTint="#F44336"
+            android:textColor="#FFFFFF"
+            app:layout_constraintTop_toBottomOf="@id/btnAddLibrary"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintWidth_percent="0.8"
+            android:layout_marginTop="16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
