--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="green_main">#22C55E</color>
+    <color name="orange_main">#FB923C</color>
+    <color name="purple_main">#A855F7</color>
+    <color name="red_main">#EF4444</color>
+    <color name="text_primary">#1F2937</color>
 </resources>
