--- a/app/src/main/res/drawable/bg_modern.xml
+++ b/app/src/main/res/drawable/bg_modern.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+       android:shape="rectangle">
 <gradient xmlns:android="http://schemas.android.com/apk/res/android"
           android:type="linear"
           android:startColor="#F8FAFC"
           android:centerColor="#F3F4F6"
           android:endColor="#EEF2FF"
           android:angle="135" />
+</shape>
