Added checkout Books and check in/extend checkout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -102,6 +102,22 @@
                     app:backgroundTint="#A855F7"
                     app:rippleColor="@color/m3_ref_palette_dynamic_neutral10"/>
 
+            <!-- Checked Out Books -->
+            <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btnCheckedOutBooks"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Checked Out Books"
+                    android:textAllCaps="false"
+                    android:textColor="#FFFFFF"
+                    android:layout_marginTop="12dp"
+                    android:insetTop="12dp"
+                    android:insetBottom="12dp"
+                    app:cornerRadius="16dp"
+                    app:elevation="2dp"
+                    app:backgroundTint="#2196F3"
+                    app:rippleColor="@color/m3_ref_palette_dynamic_neutral10"/>
+
             <!-- Delete Library -->
 
         </LinearLayout>
