--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="purple_main">#A855F7</color>
     <color name="red_main">#EF4444</color>
     <color name="text_primary">#1F2937</color>
+    <color name="m3_ref_palette_dynamic_neutral10">#F3F4F6</color>
 </resources>
