--- a/app/src/main/res/layout/activity_checked_out_books.xml
+++ b/app/src/main/res/layout/activity_checked_out_books.xml
@@ -23,7 +23,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Check Out Books"
+            android:text="Checked Out Books"
             android:textSize="24sp"
             android:textStyle="bold"
             android:textColor="#1F2937"
