--- a/app/src/main/res/layout/activity_library_create.xml
+++ b/app/src/main/res/layout/activity_library_create.xml
@@ -114,8 +114,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:timePickerMode="spinner"
-                                android:layout_gravity="center_horizontal"
-                                android:is24HourView="true"/>
+                                android:layout_gravity="center_horizontal"/>
                     </LinearLayout>
 
                     <LinearLayout
@@ -138,8 +137,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:timePickerMode="spinner"
-                                android:layout_gravity="center_horizontal"
-                                android:is24HourView="true"/>
+                                android:layout_gravity="center_horizontal"/>
                     </LinearLayout>
                 </LinearLayout>
 
